--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
+    "framer-motion": "^10.12.18",
     "next": "13.4.9",
     "next-sanity": "^5.1.1",
     "postcss": "8.4.25",
