--- a/package.json
+++ b/package.json
@@ -9,21 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "20.4.1",
-    "@types/react": "18.2.14",
-    "@types/react-dom": "18.2.6",
-    "autoprefixer": "10.4.14",
-    "eslint": "8.44.0",
-    "eslint-config-next": "13.4.9",
-    "framer-motion": "^10.12.18",
-    "next": "13.4.9",
-    "next-sanity": "^5.1.1",
-    "postcss": "8.4.25",
+    "framer-motion": "^10.16.4",
+    "next": "14.0.2",
+    "next-sanity": "^6.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.10.1",
-    "sanity": "^3.14.1",
-    "tailwindcss": "3.3.2",
-    "typescript": "5.1.6"
+    "react-icons": "^4.11.0",
+    "sanity": "^3.19.2",
+    "tailwindcss": "3.3.5"
+  },
+  "devDependencies": {
+    "@types/node": "20.9.0",
+    "@types/react": "18.2.37",
+    "@types/react-dom": "18.2.15",
+    "autoprefixer": "10.4.16",
+    "postcss": "8.4.31",
+    "typescript": "5.2.2",
+    "eslint": "8.53.0",
+    "eslint-config-next": "14.0.2"
   }
 }
