--- a/package.json
+++ b/package.json
@@ -9,23 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "framer-motion": "^10.16.4",
     "next": "14.0.2",
     "next-sanity": "^6.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.11.0",
     "sanity": "^3.19.2",
-    "tailwindcss": "3.3.5"
+    "tailwindcss": "3.3.5",
+    "tailwindcss-animated": "^1.0.1"
   },
   "devDependencies": {
     "@types/node": "20.9.0",
     "@types/react": "18.2.37",
     "@types/react-dom": "18.2.15",
     "autoprefixer": "10.4.16",
-    "postcss": "8.4.31",
-    "typescript": "5.2.2",
     "eslint": "8.53.0",
-    "eslint-config-next": "14.0.2"
+    "eslint-config-next": "14.0.2",
+    "postcss": "8.4.31",
+    "typescript": "5.2.2"
   }
 }
