--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/mdx": "^14.0.2",
     "next": "14.0.2",
     "next-sanity": "^6.0.1",
     "react": "18.2.0",
@@ -19,6 +20,8 @@
     "tailwindcss-animated": "^1.0.1"
   },
   "devDependencies": {
+    "@types/mdx": "^2.0.10",
+    "@tailwindcss/typography": "^0.5.10",
     "@types/node": "20.9.0",
     "@types/react": "18.2.37",
     "@types/react-dom": "18.2.15",
