--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@next/mdx": "^14.0.2",
     "next": "14.0.2",
+    "next-mdx-remote": "^4.4.1",
     "next-sanity": "^6.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
