--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@auth/prisma-adapter": "^1.0.6",
     "@prisma/client": "^5.6.0",
     "next": "14.0.2",
+    "next-auth": "^4.24.5",
     "next-mdx-remote": "^4.4.1",
     "prisma": "^5.6.0",
     "react": "18.2.0",
