--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "next": "14.0.2",
     "next-auth": "^4.24.5",
     "next-mdx-remote": "^4.4.1",
+    "nextjs13-progress": "^1.1.45",
     "prisma": "^5.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.11.0",
+    "reading-time": "^1.5.0",
     "tailwindcss-animated": "^1.0.1"
   },
   "devDependencies": {
