feat: not-found err for blogs and 404

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,12 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "app/(site)/blog/[slug]/page.mdx"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "app/blog/[slug]/page.mdx"
+  ],
   "exclude": ["node_modules"]
 }
