--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^1.0.14",
+    "@next-auth/prisma-adapter": "canary",
     "@prisma/client": "^5.8.0",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
