--- a/package.json
+++ b/package.json
@@ -10,31 +10,31 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@next-auth/prisma-adapter": "canary",
-    "@prisma/client": "^5.8.0",
-    "next": "14.0.4",
-    "next-auth": "^4.24.5",
+    "@auth/prisma-adapter": "^2.0.0",
+    "@prisma/client": "^5.12.1",
+    "next": "14.2.2",
+    "next-auth": "^4.24.7",
     "next-mdx-remote": "^4.4.1",
-    "next13-progressbar": "^1.1.3",
-    "prisma": "^5.8.0",
+    "next13-progressbar": "^1.2.1",
+    "prisma": "^5.12.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.12.0",
+    "react-icons": "^5.1.0",
     "reading-time": "^1.5.0",
     "rss": "^1.2.2",
     "tailwindcss-animated": "^1.0.1"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.10",
-    "@types/node": "20.10.8",
-    "@types/react": "18.2.47",
-    "@types/react-dom": "18.2.18",
+    "@tailwindcss/typography": "^0.5.12",
+    "@types/node": "20.12.7",
+    "@types/react": "18.2.79",
+    "@types/react-dom": "18.2.25",
     "@types/rss": "^0.0.32",
-    "autoprefixer": "10.4.16",
-    "eslint": "8.56.0",
-    "eslint-config-next": "14.0.4",
-    "postcss": "8.4.33",
-    "tailwindcss": "3.4.1",
-    "typescript": "5.3.3"
+    "autoprefixer": "10.4.19",
+    "eslint": "9.1.0",
+    "eslint-config-next": "14.2.2",
+    "postcss": "8.4.38",
+    "tailwindcss": "3.4.3",
+    "typescript": "5.4.5"
   }
 }
