feat: redis setup, increment pageviews route

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,5 @@ GOOGLE_APP_CLIENT_ID=""
 GOOGLE_APP_CLIENT_SECRET=""
 NEXTAUTH_URL=""
 NEXT_PUBLIC_BASE_URL=""
+UPSTASH_REDIS_REST_URL=""
+UPSTASH_REDIS_REST_TOKEN=""
