--- a/package.json
+++ b/package.json
@@ -10,31 +10,32 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^2.0.0",
-    "@prisma/client": "^5.12.1",
-    "next": "14.2.2",
+    "@auth/prisma-adapter": "^2.4.2",
+    "@prisma/client": "^5.17.0",
+    "@upstash/redis": "^1.34.0",
+    "next": "14.2.5",
     "next-auth": "^4.24.7",
-    "next-mdx-remote": "^4.4.1",
+    "next-mdx-remote": "^5.0.0",
     "next13-progressbar": "^1.2.1",
-    "prisma": "^5.12.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-icons": "^5.1.0",
+    "prisma": "^5.17.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-icons": "^5.2.1",
     "reading-time": "^1.5.0",
     "rss": "^1.2.2",
-    "tailwindcss-animated": "^1.0.1"
+    "tailwindcss-animated": "^1.1.2"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.12",
-    "@types/node": "20.12.7",
-    "@types/react": "18.2.79",
-    "@types/react-dom": "18.2.25",
+    "@tailwindcss/typography": "^0.5.13",
+    "@types/node": "22.1.0",
+    "@types/react": "18.3.3",
+    "@types/react-dom": "18.3.0",
     "@types/rss": "^0.0.32",
-    "autoprefixer": "10.4.19",
-    "eslint": "9.1.0",
-    "eslint-config-next": "14.2.2",
-    "postcss": "8.4.38",
-    "tailwindcss": "3.4.3",
-    "typescript": "5.4.5"
+    "autoprefixer": "10.4.20",
+    "eslint": "9.8.0",
+    "eslint-config-next": "14.2.5",
+    "postcss": "8.4.41",
+    "tailwindcss": "3.4.7",
+    "typescript": "5.5.4"
   }
 }
