--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-slot-counter": "^3.0.1",
     "reading-time": "^1.5.0",
     "rss": "^1.2.2",
+    "swr": "^2.2.5",
     "tailwindcss-animated": "^1.1.2"
   },
   "devDependencies": {
