--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@auth/prisma-adapter": "^2.4.2",
     "@prisma/client": "^5.17.0",
     "@upstash/redis": "^1.34.0",
+    "date-fns": "^3.6.0",
     "next": "14.2.5",
     "next-auth": "^4.24.7",
     "next-mdx-remote": "^5.0.0",
