--- a/package.json
+++ b/package.json
@@ -5,20 +5,17 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "postinstall": "prisma generate",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^2.4.2",
-    "@prisma/client": "^5.17.0",
+    "@auth/upstash-redis-adapter": "^2.4.2",
     "@upstash/redis": "^1.34.0",
     "date-fns": "^3.6.0",
     "next": "14.2.5",
     "next-auth": "^4.24.7",
     "next-mdx-remote": "^5.0.0",
     "next13-progressbar": "^1.2.1",
-    "prisma": "^5.17.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-icons": "^5.2.1",
