feat: typewriting comp for about

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-icons": "^5.2.1",
+    "react-simple-typewriter": "^5.0.1",
     "react-slot-counter": "^3.0.1",
     "reading-time": "^1.5.0",
     "rss": "^1.2.2",
