feat: photos lightbox

--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "next-auth": "^4.24.7",
     "next-mdx-remote": "^5.0.0",
     "next13-progressbar": "^1.2.1",
+    "photoswipe": "^5.4.4",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-icons": "^5.2.1",
+    "react-photoswipe-gallery": "^3.0.2",
     "react-simple-typewriter": "^5.0.1",
     "react-slot-counter": "^3.0.1",
     "reading-time": "^1.5.0",
